# trading-competition

./: .gitignore  LT3_Oliver.py  MA_Pliego.py  Pliego_liquidity.py  README.md  Vola_algo.py  library.py  prompt.md
Algo_case_Kanish/: CLAUDE_CODE_COMMAND.md  algo_strategy_kanish.md  api.py  case_logger.py  config.py  main.py
Liquidity_risk_case/: .gitignore  README.txt  analyze_data.py  config.py  data_collector.py  list_sessions.py  main.py  models.py  pandas_helpers.py  requirements.txt  rit_client.py  session_manager.py  start_collector.bat  watchdog.py
Merger_Arbitrage_case/: config.py  data_collector.py  deal_analyzer.py  main.py  rit_client.py  (+2 more)
algo_case/: blueprint.md  context.md  pyproject.toml  rit_api_documentation.yaml  template.py
algo_case/code_reviews/: feature_1_review.md  feature_2_review.md  feature_3_review.md  feature_4_review.md
algo_case/config/: default.yaml
algo_case/scripts/: run_live.py
algo_case/src/ritc_mm/: config.py
algo_case/src/ritc_mm/api/: __init__.py  client.py  errors.py  models.py  ratelimit.py
algo_case/src/ritc_mm/data/: __init__.py  book.py  news.py  state.py  tape.py
algo_case/src/ritc_mm/strategy/: __init__.py  engine.py  fair_value.py  quoting.py  regimes.py
algo_case/src/ritc_mm/telemetry/: logger.py
algo_case/src/ritc_mm/tests/: test_api.py  test_book.py  test_config.py  test_fair_value.py  test_logging.py  test_news.py  test_quoting.py  test_regimes.py  test_state.py  test_strategy_engine.py  test_tape.py
algo_case/src/ritc_mm_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+348 files in other folders)
