[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "*REMOVED*-mm-bot"
version = "0.1.0"
description = "*REMOVED* Interactive Trader algorithmic market making bot"
readme = {text = "*REMOVED* market making bot scaffold.", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "pydantic==2.10.6",
  "PyYAML==6.0.2",
  "pytest==8.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/*REMOVED*_mm/tests"]
pythonpath = ["src"]
addopts = "-q"
